<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/custom_toast_layout"
    android:orientation="vertical"
    android:background="#F14E23" >

    <ImageView
        android:id="@+id/custom_toast_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/my_applivation"
        android:src="@drawable/customtoastimage"/>
    <TextView
        android:id="@+id/custom_toast_message"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/to"
        android:text="@string/welcome_to_my_application" />
</LinearLayout>
